--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 </div>
 <div class="footer">
-    <p>Created it by:&nbsp;<a href="https://github.com/omariscoming/id">OmarIsComing</a></p>
+    <p>Created it by:&nbsp;<a href="https://github.com/omariscoming">OmarIsComing</a></p>
 </div>
 </body>
 </html>
